# cursed_controls

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  SetupRaspbian.md  boottime-optimizations.md  cursed-controls-web.service  cursed-controls.service  example_rocket_league.yaml  example_wiimote.yaml  example_xbox_passthrough.yaml  init-raspbian.sh  install.sh  mapping.py  mapping.yaml  pyproject.toml  x360_gadget.py  xboxone-mapping.yaml
.github/workflows/: test.yml
cursed_controls/: __init__.py  app_state.py  bluetooth.py  cli.py  config.py  discovery.py  mapper_tui.py  output.py  rumble.py  runtime.py  simulate.py  xbox.py
cursed_controls/web/: deps.py  runtime_manager.py  server.py
cursed_controls/web/routes/: bluetooth.py  config.py  devices.py  presets.py  runtime.py
cursed_controls/web/static/: app.js  index.html  style.css
docs/: app.js  index.html  style.css
presets/: 8bitdo-pro-3.yaml  nintendo-pro-controller.yaml  nunchuk-rocket-league.yaml  nunchuk.yaml  ps5-dualsense.yaml  wiimote-rocket-league.yaml  wiimote-tv-remote.yaml  wiimote.yaml  xbox-wireless.yaml
python/: example_wiimote.yaml  mapping.py  print_capabilities.py  pyproject.toml  x360-gadget.py  x360.py  xbone_capabilities.md
python/cursed_controls/: cli.py  config.py  discovery.py  mapper_tui.py  output.py  rumble.py
python/test_scripts/: platformer_to_xbox.py  x360.py  xbox_emu_example.py
python/test_scripts/wii_stubs/: wii_buttons.py  wii_led4.py  wiimoteExample.py
python/tests/: test_mapper_tui.py  test_output.py  test_runtime.py  test_simulate.py
python/wii_stubs/: wii_led4.py  wiiinfo.md  wiimoteExample.py  wiirumble.py
rust_stub/: Cargo.toml  build.rs
rust_stub/src/: main.rs
rust_stub/src/controller_abs/: mod.rs
rust_stub/src/controller_in/: mod.rs
rust_stub/src/controller_out/: mod.rs  x360.rs
rust_stub/src/inp/: mod.rs
scripts/: show_axis_range.py
src/: main.rs
src/controller_abs/: mod.rs
src/controller_in/: mod.rs
test_scripts/: platformer_to_xbox.py
test_scripts/wii_stubs/: wiirumble.py
tests/: __init__.py  test_bluetooth.py  test_install_assets.py  test_mapper_tui.py  test_runtime.py  test_xbox.py
tests/web/: test_app_state.py  test_routes_bluetooth.py  test_routes_config.py  test_routes_devices.py  test_routes_runtime.py  test_runtime_manager.py  test_server.py
