[package]
name = "cursed_controls"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
futures = "0.3.30"
futures-util = "0.3.30"
gilrs = "0.10.9"
num-traits = "0.2.19"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1", features = ["full"] }
xwiimote="0.2.5"

[profile.release.build-override]
opt-level = 3
